--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -15,7 +15,7 @@ apply plugin: 'com.android.application'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
-    compileSdkVersion 'Zebra Technologies Corp:EMDK APIs:23'
+    compileSdkVersion 23
     buildToolsVersion '26.0.2'
 
     lintOptions {
@@ -46,6 +46,7 @@ flutter {
 }
 
 dependencies {
+    implementation 'com.symbol:emdk:7.3.14'
     androidTestCompile 'com.android.support:support-annotations:25.4.0'
     androidTestCompile 'com.android.support.test:runner:0.5'
     androidTestCompile 'com.android.support.test:rules:0.5'
