--- a/android/local.properties
+++ b/android/local.properties
@@ -1,3 +1,3 @@
-sdk.dir=C:\\Users\\aless\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\Users\\aless\\AppData\\Local\\Flutter
+sdk.dir=C:/android-sdk
+flutter.sdk=C:\\src\\flutter
 flutter.buildMode=debug
