update flutter and dart

--- a/android/local.properties
+++ b/android/local.properties
@@ -1,3 +1,5 @@
-sdk.dir=C:/android-sdk
-flutter.sdk=C:\\src\\flutter
+sdk.dir=D:/AndroidSdk
+flutter.sdk=D:\\fluttersdk\\flutter
 flutter.buildMode=debug
+flutter.versionName=1.0.0
+flutter.versionCode=1
